made spacing fixes

--- a/css/core-styles.css
+++ b/css/core-styles.css
@@ -871,7 +871,9 @@ button:hover {
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
                 justify-content: space-between;
-        width: 1100px;
+        width: 100%;
+        padding: 0 10px;
+        max-width: 1100px;
         margin: auto;
     }
 
@@ -1038,7 +1040,7 @@ footer a svg {
 		-webkit-box-pack: justify;
 		    -ms-flex-pack: justify;
 		        justify-content: space-between;
-		padding: 0;
+		padding: 0 10px;
 	}
 
 	.footer-item {
